# better-site

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PROGRESS.md  README.md  TODOS.md  railway.api.json  railway.json  railway.web.json
api/: __init__.py  (+3 more)
pipeline/: __init__.py  alembic.ini  config.py  db.py  deploy.py  observability.py  pyproject.toml  requirements.txt
pipeline/agents/: __init__.py
pipeline/agents/extractor/: __init__.py  base.py  pipeline.py  registry.py
pipeline/agents/lead_generator/: __init__.py  base.py  pipeline.py  targets.py
pipeline/agents/sales/: __init__.py  base.py  registry.py
pipeline/agents/scanner/: __init__.py  base.py  pipeline.py  scoring.py
pipeline/alembic/: env.py
pipeline/alembic/versions/: 2026_04_15_0907_a1b2c3d4e5f6_initial_schema_ops_and_app.py  2026_04_15_2116_b2c3d4e5f6a7_leads_state_metadata_email_source.py  2026_04_15_2311_c3d4e5f6a7b8_scans_scoring_columns.py  2026_04_16_0100_d4e5f6a7b8c9_admin_reviews.py  2026_04_16_0200_e5f6a7b8c9d0_superadmin_and_password_change.py  (+1 more)
pipeline/flows/: __init__.py  lead_generator.py  lead_generator_batch.py  process_lead.py  sales_agent.py  scanner.py  website_builder.py  website_extractor.py  website_scanner.py
pipeline/models/: __init__.py  analyst.py  base.py  email.py  event.py  extraction.py  lead.py  payment.py  review.py  scan.py  site.py  suppression.py
pipeline/prompts/: __init__.py
pipeline/targets/: movers_us.csv  movers_us2.csv
pipeline/utils/: __init__.py  browser.py  db.py  image_fetch.py  r2.py  slug.py  ssrf.py  url.py
(+106 files in other folders)
